# EternaSquad_META__HACATHON

./: Dockerfile  README.md  baseline_inference.py  client.py  graders.py  inference.py  invoice_data.py  models.py  openenv.yaml  pyproject.toml
outputs/evals/: baseline_results.json  inference_results.json
server/: app.py  invoice_environment.py  requirements.txt
